[project]
name = "selenium_helper"
description = "Simple Selenium Load Helper Package"
url = "https://github.com/Indosaram/selenium_helper.git"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools", "wheel", "selenium>=4.3.0", "requests>=2.28.0"]
build-backend = "setuptools.build_meta"
